# langchain_project

./: .env  .gitignore  README.md  test.py
api/: columns.json  run_chat.py
api/app/: api.py  config.py  feature_mapper.py  kafka_worker.py  model_service.py  normalizer.py  preprocess.py  storage.py  window_buffer.py
api/app/tools/: gas_status_tool.py
api/data/predictions/: 2026-06-03.jsonl  2026-06-04.jsonl  _latest_prediction.json
api/data/raw/: 2026-05-31.jsonl  2026-06-01.jsonl  2026-06-02.jsonl  2026-06-03.jsonl  2026-06-04.jsonl
multi_agent_langgraph_scaffold/: README.md  chart.mmd  pyproject.toml
multi_agent_langgraph_scaffold/src/: __init__.py  agents.py  graph.py  json_output.py  llm.py  main.py  router.py  state.py  tools.py
